--- a/SDC_Term1_P1.ipynb
+++ b/SDC_Term1_P1.ipynb
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -221,7 +221,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -326,7 +326,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -416,7 +416,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -455,7 +455,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -466,7 +466,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {
     "scrolled": false
    },
@@ -483,7 +483,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|█████████▉| 221/222 [00:06<00:00, 35.56it/s]\n"
+      "100%|█████████▉| 221/222 [00:17<00:00, 12.86it/s]\n"
      ]
     },
     {
@@ -493,8 +493,8 @@
       "[MoviePy] Done.\n",
       "[MoviePy] >>>> Video ready: test_videos_output/solidWhiteRight.mp4 \n",
       "\n",
-      "CPU times: user 4.76 s, sys: 534 ms, total: 5.3 s\n",
-      "Wall time: 6.97 s\n"
+      "CPU times: user 6.87 s, sys: 787 ms, total: 7.66 s\n",
+      "Wall time: 18.9 s\n"
      ]
     }
    ],
@@ -508,7 +508,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {
     "scrolled": false
    },
@@ -525,7 +525,7 @@
        "<IPython.core.display.HTML object>"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -540,7 +540,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -555,7 +555,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|███████████████████████████████████████▉| 681/682 [00:11<00:00, 57.83it/s]\n"
+      "100%|█████████▉| 681/682 [00:42<00:00, 16.19it/s]\n"
      ]
     },
     {
@@ -565,7 +565,8 @@
       "[MoviePy] Done.\n",
       "[MoviePy] >>>> Video ready: test_videos_output/solidYellowLeft.mp4 \n",
       "\n",
-      "Wall time: 12.2 s\n"
+      "CPU times: user 18 s, sys: 1.99 s, total: 20 s\n",
+      "Wall time: 43.4 s\n"
      ]
     }
    ],
@@ -579,7 +580,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -594,7 +595,7 @@
        "<IPython.core.display.HTML object>"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -609,7 +610,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -624,7 +625,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|████████████████████████████████████████| 251/251 [00:08<00:00, 27.95it/s]\n"
+      "100%|██████████| 251/251 [00:33<00:00,  7.54it/s]\n"
      ]
     },
     {
@@ -634,7 +635,8 @@
       "[MoviePy] Done.\n",
       "[MoviePy] >>>> Video ready: test_videos_output/challenge.mp4 \n",
       "\n",
-      "Wall time: 9.89 s\n"
+      "CPU times: user 12.3 s, sys: 2.39 s, total: 14.7 s\n",
+      "Wall time: 37 s\n"
      ]
     }
    ],
@@ -648,7 +650,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -663,7 +665,7 @@
        "<IPython.core.display.HTML object>"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
